@@ -523,7 +523,7 @@ void AxisDock::updatePlotRangeList() {
 	if (m_axis->coordinateSystemCount() == 0)
 		return;
 
-	Axis::Orientation orientation = m_axis->orientation();
+	auto orientation = m_axis->orientation();
 	Range<double> logicalRange;
 	if (orientation == Axis::Orientation::Horizontal)
 		logicalRange = m_axis->plot()->range(Dimension::Y, m_axis->plot()->coordinateSystem(m_axis->coordinateSystemIndex())->index(Dimension::Y));
@@ -2156,7 +2156,8 @@ void AxisDock::saveConfigAsTemplate(KConfig& config) {
 	auto group = config.group(QStringLiteral("Axis"));
 
 	// General
-	group.writeEntry(QStringLiteral("Orientation"), ui.cbOrientation->currentIndex());
+	auto orientation = (WorksheetElement::Orientation)ui.cbOrientation->currentIndex();
+	group.writeEntry(QStringLiteral("Orientation"), (int)orientation);
 
 	if (ui.cbPosition->currentIndex() == 2) {
 		group.writeEntry(QStringLiteral("Position"), static_cast<int>(Axis::Position::Centered));
@@ -2179,9 +2180,18 @@ void AxisDock::saveConfigAsTemplate(KConfig& config) {
 	group.writeEntry(QStringLiteral("ScalingFactor"), ui.sbScalingFactor->value());
 	group.writeEntry(QStringLiteral("ShowScaleOffset"), ui.chkShowScaleOffset->isChecked());
 
-	// Title
+	// BOOKMARK(axis title): Title
 	auto axisTitleGroup = config.group(QStringLiteral("AxisTitle"));
 	labelWidget->saveConfig(axisTitleGroup);
+	// addtionally save rotation for x and y seperately to allow independent values
+	if (orientation == Axis::Orientation::Horizontal)
+		axisTitleGroup.writeEntry(QStringLiteral("RotationX"), labelWidget->ui.sbRotation->value());
+	else {
+		axisTitleGroup.writeEntry(QStringLiteral("RotationY"), labelWidget->ui.sbRotation->value());
+	}
+	// reset rotation used by the other axis (only used when other axis not saved)
+	// see Axis.cpp:BOOKMARK(axis title)
+	axisTitleGroup.writeEntry(QStringLiteral("Rotation"), 0);
 
 	// Line
 	lineWidget->saveConfig(group);
